--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -2,13 +2,13 @@
 
 <form action='/users' method='post'>
   <label for='email'>
-    Email: <input name='email' type='text' value="<%= @user.email %>">
+    Email: <input name='email' type='text' value="<%= @user.email %>" required pattern = "[^@\s]+@[^@\s]+\.[^@\s]+">
   </label>
   <label for='password'>
-    Password: <input name='password' type='password'>
+    Password: <input name='password' type='password' required>
   </label>
   <label for='password'>
-    Confirm Password: <input name='password_confirmation' type='password'>
+    Confirm Password: <input name='password_confirmation' type='password' required>
   </label>
   <input type='submit' value='Sign up'>
 </form>
